<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:enabled="true"
        android:icon="@drawable/home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_deliveries"
        android:enabled="true"
        android:icon="@drawable/delivery_black_24dp"
        android:title="@string/title_deliveries" />

    <item
        android:id="@+id/navigation_notifications"
        android:enabled="true"
        android:icon="@drawable/notifications_black_24dp"
        android:title="@string/title_notifications" />
    <item
        android:id="@+id/navigation_profile"
        android:enabled="true"
        android:icon="@drawable/person_black_24dp"
        android:title="@string/title_profile" />

</menu>
