<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">



<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_centerInParent="true">

   <TextView
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginBottom="@dimen/activity_vertical_margin"
       android:text="@string/welcome_message"
       android:textColor="@color/primaryTextColor"
       android:textAlignment="center"/>

   <com.google.android.material.textfield.TextInputLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       app:endIconMode="clear_text"
       style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

      <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/fNameField"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginBottom="@dimen/activity_vertical_margin"
          android:hint="@string/first_name"
          android:textColor="@color/primaryTextColor"
          android:inputType="text" />


   </com.google.android.material.textfield.TextInputLayout>


   <com.google.android.material.textfield.TextInputLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       app:endIconMode="clear_text"
       style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

      <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/lNameField"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginBottom="@dimen/activity_vertical_margin"
          android:hint="@string/last_name"
          android:inputType="text"/>


   </com.google.android.material.textfield.TextInputLayout>

   <com.google.android.material.textfield.TextInputLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       app:endIconMode="clear_text"
       style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

      <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/emailField"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginBottom="@dimen/activity_vertical_margin"
          android:hint="@string/email"
          android:inputType="textEmailAddress"/>


   </com.google.android.material.textfield.TextInputLayout>

   <TextView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/account_type"
       android:textColor="@color/primaryTextColor"/>

   <RadioGroup
       android:id="@+id/accountTypeRadioGroup"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginBottom="@dimen/activity_vertical_margin"
       android:orientation="horizontal">

      <RadioButton
          android:id="@+id/userRadioBtn"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/user">
      </RadioButton>
      <RadioButton
          android:id="@+id/courierRadioBtn"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/courier">
      </RadioButton>
   </RadioGroup>

   <com.google.android.material.textfield.TextInputLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       app:endIconMode="password_toggle"
       style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">


      <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/passwordField"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginBottom="@dimen/activity_vertical_margin"
          android:hint="@string/password"
          android:inputType="textPassword" />

   </com.google.android.material.textfield.TextInputLayout>


   <com.google.android.material.button.MaterialButton
       android:id="@+id/signUpBtn"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/sign_up"
       android:textColor="@color/primaryTextColor"
       style="@style/Widget.MaterialComponents.Button"/>

</LinearLayout>


</RelativeLayout>