<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.delivery.DeliveryActivity">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/back_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:src="@drawable/back_arrow_24dp"
                android:padding="16dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/back_btn"
                android:padding="16dp"
                android:layout_marginStart="16dp"
                android:text="@string/delivery"
                android:textColor="@color/primaryTextColor"
                android:textSize="20sp"
                android:gravity="center" />

        </RelativeLayout>



    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/delivery_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:text="@string/status"
                android:textColor="@color/primaryTextColor"
                android:textSize="18sp"/>
            <Button
                android:id="@+id/delivery_accept_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:background="@drawable/rounded_corners"
                android:text="Accept"
                android:textColor="@color/primaryTextColor"/>

        </RelativeLayout>


        <TextView
            android:id="@+id/delivery_collection_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:text="@string/collection_address"
            android:textColor="@color/primaryTextColor"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/delivery_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:text="@string/delivery_address"
            android:textColor="@color/primaryTextColor"
            android:textSize="18sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/delivery_type"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:text="@string/delivery_type"
                android:textColor="@color/primaryTextColor"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/delivery_expiry_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/expiry_date"
                android:textColor="@color/primaryTextColor"
                android:textSize="18sp"/>

        </LinearLayout>


        <TextView
            android:id="@+id/delivery_extra_details"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/extra_details"
            android:textColor="@color/primaryTextColor"
            android:textSize="18sp"/>




    </LinearLayout>

    <fragment
        android:id="@+id/directionsMap"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:name="com.google.android.gms.maps.MapFragment" />


</LinearLayout>