<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.details.ProfileDetails">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


<!--    <LinearLayout-->
<!--        android:id="@+id/profile_title"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginBottom="60dp"-->
<!--        android:orientation="horizontal">-->

<!--        <TextView-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_weight="3"-->
<!--            android:text="Profile details"-->
<!--            android:textSize="22sp"-->
<!--            android:textColor="@color/secondaryColor"-->
<!--            android:padding="16dp"/>-->

<!--        <Button-->
<!--            android:id="@+id/profile_edit_btn"-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_weight="1"-->
<!--            android:text="@string/edit" />-->

<!--    </LinearLayout>-->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/activity_vertical_margin"
        android:text="@string/profile_details"
        android:textSize="22sp"
        android:textColor="@color/secondaryColor" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/profile_fName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/first_name"
                android:textColor="@color/primaryTextColor"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/profile_lName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/last_name"
                android:textColor="@color/primaryTextColor"
                android:textSize="20sp"/>

        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/profile_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:text="@string/email"
        android:textColor="@color/primaryTextColor"
        android:textSize="20sp"/>
</LinearLayout>

</FrameLayout>